Fix Send Mail button being stretched when it should not be

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,6 +101,10 @@ body {
             display: flex;
             flex-direction: column;
             text-align: center;
+
+            .mail-button {
+                align-self: center;
+            }
         }
     }
 
